--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Jiri Vrany",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-closure-compiler": "0.0.21",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
