--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "~0.4.2",
     "grunt-closure-compiler": "0.0.21",
     "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-htmlmin": "~0.1.3"
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
