--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-closure-compiler": "0.0.21",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-jshint": "~0.7.2"
   }
 }
